# lewoc

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
graphics/: Cargo.toml
graphics/src/: lib.rs
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: index.tsx
mobile/lib/: bluetooth.ts
sim/: Cargo.toml
sim/src/: main.rs
src/: bt_server.rs  display.rs  input.rs  lora.rs  main.rs  peri.rs  storage.rs  utils.rs
